--- a/ADT-solver/ADT-solver.fsproj
+++ b/ADT-solver/ADT-solver.fsproj
@@ -6,20 +6,20 @@
 
         <IsPackable>false</IsPackable>
         <GenerateProgramFile>false</GenerateProgramFile>
+        <RootNamespace>TestProject1</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <Compile Include="Utils.fs" />
         <Compile Include="Approximation.fs" />
-        <Compile Include="UnitTest1.fs" />
-        <Compile Include="Program.fs" />
         <Content Include=".editorconfig" />
+        <Compile Include="Program.fs" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Antlr4.Runtime.Standard" Version="4.10.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-        <PackageReference Include="Microsoft.Z3" Version="4.10.1" />
+        <PackageReference Include="Microsoft.Z3" Version="4.11.2" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
         <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
