--- a/ADT-solver/ADT-solver.fsproj
+++ b/ADT-solver/ADT-solver.fsproj
@@ -10,23 +10,29 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="TextUtils.fs" />
+        <Compile Include="Redlog\RedlogParser\RedTrace\Utils.fs" />
+        <Compile Include="Redlog\RedlogParser\RedTrace\Parser.fs" />
         <Compile Include="Z3Interpreter.fs" />
+        <Compile Include="Process\Process.fs" />
+        <Folder Include="RedlogParser\RedTrace" />
+        <Compile Include="Redlog\Redlog.fs" />
         <Compile Include="Utils.fs" />
         <Compile Include="Approximation.fs" />
         <Content Include=".editorconfig" />
         <Compile Include="ProofBased\Utils.fs" />
         <Compile Include="ProofBased\Solver.fs" />
-        <Content Include="RedlogParser\RedTrace.g4" />
-        <Content Include="RedlogParser\RedTraceParser\RedTraceParser.csproj" />
-        <Compile Include="RedlogParser\RedTrace\Parser.fs" />
+        <Content Include="Redlog\RedlogParser\RedTrace.g4" />
+        <Content Include="Redlog\RedlogParser\RedTraceParser\RedTraceParser.csproj" />
+        <Folder Include="RedlogParser\RedTraceParser" />
         <Compile Include="Tests\ProofBased\Test.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Antlr4.Runtime.Standard" Version="4.10.1" />
-        <PackageReference Include="FParsec" Version="1.1.1" />
-        <PackageReference Include="FParsec.CSharp" Version="12.2.0" />
+        <PackageReference Include="FAKE" Version="5.16.0" />
+        <PackageReference Include="FAKE.Core" Version="5.16.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
         <PackageReference Include="Microsoft.Z3" Version="4.11.2" />
         <PackageReference Include="NUnit" Version="3.13.3" />
@@ -47,7 +53,7 @@
             <HintPath>..\SMTLIB2\SMTLIB2\bin\Debug\net6.0\SMTLIB2Parser.dll</HintPath>
         </Reference>
         <Reference Include="RedTraceParser">
-            <HintPath>.\RedlogParser\RedTraceParser\bin\Debug\net6.0\RedTraceParser.dll</HintPath>
+            <HintPath>.\Redlog\RedlogParser\RedTraceParser\bin\Debug\net6.0\RedTraceParser.dll</HintPath>
         </Reference>
     </ItemGroup>
     
