--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SMTLIB2"]
 	path = SMTLIB2
-	url = https://github.com/Columpio/SMTLIB2.git
+	url = https://github.com/ndreuu/SMTLIB2.git
