--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "SMTLIB2"]
 	path = SMTLIB2
 	url = https://github.com/ndreuu/SMTLIB2.git
+
+[submodule "z3"]
+	path = z3
+	url = https://github.com/ndreuu/z3.git
+	branch = 4.11.2
