--- a/CataHornSolver/CataHornSolver.fsproj
+++ b/CataHornSolver/CataHornSolver.fsproj
@@ -15,12 +15,16 @@
         <Compile Include="Approximation.fs" />
         <Compile Include="Parser.fs" />
         <Compile Include="Process.fs" />
+        <Compile Include="z3Process.fs" />
         <Compile Include="Redlog.fs" />
         <Compile Include="Tree.fs" />
         <Compile Include="Solver.fs" />
         <Compile Include="Tests\Test.fs" />
         <Content Include="Tests\Source\racer.horn.smt2">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+        <Content Include="..\z3\build\z3">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
         <Compile Include="Program.fs" />
     </ItemGroup>
@@ -30,25 +34,30 @@
         <PackageReference Include="FAKE" Version="5.16.0" />
         <PackageReference Include="FAKE.Core" Version="5.16.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+        <PackageReference Include="Microsoft.Z3" Version="4.11.2" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
         <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
         <PackageReference Include="coverlet.collector" Version="3.1.2" />
     </ItemGroup>
-
+    
+    
+    
     <ItemGroup>
       <ProjectReference Include="..\SMTLIB2\SMTLIB2\SMTLIB2.fsproj" />
     </ItemGroup>
-
+    
     <ItemGroup>
         <ProjectReference Include="..\RedlogParser\RedlogParser.csproj" />
     </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Microsoft.Z3">
-        <HintPath>..\z3\build\Microsoft.Z3.dll</HintPath>
-      </Reference>
-    </ItemGroup>
+    
+    
+    
+<!--    <ItemGroup>-->
+<!--      <Reference Include="Microsoft.Z3">-->
+<!--        <HintPath>..\z3\build\Microsoft.Z3.dll</HintPath>-->
+<!--      </Reference>-->
+<!--    </ItemGroup>-->
 
 
 </Project>
