--- a/CataHornSolver/CataHornSolver.fsproj
+++ b/CataHornSolver/CataHornSolver.fsproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="State.fs" />
         <Compile Include="Utils.fs" />
         <Compile Include="Z3Interpreter.fs" />
         <Compile Include="Approximation.fs" />
