--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,13 +22,14 @@ jobs:
         dotnet-version: 6.0.x
       
     - name: Preparing
-      run: git clone --recursive https://github.com/ndreuu/SMTLIB2.git
-           git submodule update --init --recursive
-           cd ./z3
-           python3 ./scripts/mk_make.py --dotnet
-           cd build; make
-           cd ../../
-           dotnet build
+      run: |
+        git clone --recursive https://github.com/ndreuu/SMTLIB2.git
+        git submodule update --init --recursive
+        cd ./z3
+        python3 ./scripts/mk_make.py --dotnet
+        cd build; make
+        cd ../../
+        dotnet build
     
     - name: Restore dependencies
       run: dotnet restore
