--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,7 +17,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: |
+        actions/setup-dotnet@v3
+        actions/upload-artifact@v3
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
@@ -34,5 +36,4 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Run
-      uses: actions/upload-artifact@v3
       run: dotnet run
