--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,10 @@ jobs:
     - name: Build
       run: dotnet build 
     - name: Run
-      run: dotnet run  ./Tests/Source/TIP-no-NAT/false_graph_bt3.smt2
+      run: dotnet run --project CataHornSolver.fsproj ./Tests/Source/TIP-no-NAT/false_graph_bt3.smt2
+#        for v in ./Tests/Source/TIP-no-NAT/*.smt2 do
+#        echo $v; /home/andrew/RiderProjects/adt-solver-smr/CataHornSolver/bin/Release/net6.0/CataHornSolver $v 
+#        done;
 
 
 #for v in ./bin/Debug/net6.0/Tests/Source/; do
