--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,6 +25,7 @@ jobs:
         git clone --recursive https://github.com/ndreuu/SMTLIB2.git
         git submodule update --init --recursive
         ls
+        mkdir ./z3/build/
         cp ./d ./z3/build/
 #        cd ./z3
 #        python3 ./scripts/mk_make.py 
