--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
         git submodule update --init --recursive
         ls
         mkdir ./z3/build/
-        cp ./d ./z3/build/
+        cp -r ./d ./z3/build/
 #        cd ./z3
 #        python3 ./scripts/mk_make.py 
 #        cd build; make
