--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,6 +27,7 @@ jobs:
         ls
         mkdir ./z3/build/
         cp -r ./d/z3 ./z3/build/
+        sudo gdebi ./d/reduce.deb
 #        cd ./z3
 #        python3 ./scripts/mk_make.py 
 #        cd build; make
@@ -36,7 +37,6 @@ jobs:
       run: |
         ls
         dotnet build ./ADTsolver.sln
-        cd ./CataHornSolver
     - name: Run
       run: |
         cd ./CataHornSolver
