--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,8 +27,8 @@ jobs:
         ls
         mkdir ./z3/build/
         cp -r ./d/z3 ./z3/build/
-        sudo dpkg -i ./d/reduce.deb
-        sudo apt-get install -f
+        sudo apt install gdebi
+        sudo gdebi ./d/reduce.deb
 #        cd ./z3
 #        python3 ./scripts/mk_make.py 
 #        cd build; make
