--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,7 @@ jobs:
         mkdir ./z3/build/
         cp -r ./d/z3 ./z3/build/
         sudo apt install gdebi
-        sudo gdebi -y ./d/reduce.deb
+        sudo gdebi --n ./d/reduce.deb
 #        cd ./z3
 #        python3 ./scripts/mk_make.py 
 #        cd build; make
