--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,7 +41,11 @@ jobs:
     - name: Run
       run: |
         cd ./CataHornSolver
-        dotnet run --project CataHornSolver.fsproj ./Tests/Source/TIP-no-NAT/false_graph_bt3.smt2
+        for v in ./Tests/Source/TIP-no-NAT/*.smt2 do
+          dotnet run --project CataHornSolver.fsproj $v 
+        done;
+#        dotnet run --project CataHornSolver.fsproj ./Tests/Source/TIP-no-NAT/false_graph_bt3.smt2
+
 #        for v in ./Tests/Source/TIP-no-NAT/*.smt2 do
 #        echo $v; /home/andrew/RiderProjects/adt-solver-smr/CataHornSolver/bin/Release/net6.0/CataHornSolver $v 
 #        done;
