--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,8 +40,9 @@ jobs:
         dotnet build ./ADTsolver.sln
     - name: Run
       run: |
-        cd ./CataHornSolver
-        for v in ./Tests/Source/TIP-no-NAT/*.smt2 do  echo "$v" done;
+        for v in ./Tests/Source/TIP-no-NAT/*.smt2 
+        do echo $v 
+        done;
   
 #        for v in ./Tests/Source/TIP-no-NAT/*.smt2; do dotnet run --project CataHornSolver.fsproj "${v}" done;
 
