--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Run
       run: |
         for v in ./Tests/Source/TIP-no-NAT/*.smt2 
-        do echo $v 
+        do dotnet run --project CataHornSolver.fsproj v
         done;
   
 #        for v in ./Tests/Source/TIP-no-NAT/*.smt2; do dotnet run --project CataHornSolver.fsproj "${v}" done;
