--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,6 +40,7 @@ jobs:
         dotnet build ./ADTsolver.sln
     - name: Run
       run: |
+        cd ./CataHornSolver
         for v in ./Tests/Source/TIP-no-NAT/*.smt2 
         do dotnet run --project CataHornSolver.fsproj v
         done;
