--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,7 +51,7 @@ jobs:
       run: |
         cd ./CataHornSolver
         for v in ./Tests/Source/TIP-no-NAT/*.smt2
-        do timeout 20s sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v" || true
+        do timeout 150 sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v" || true
 
         done;
   
