--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,9 +51,12 @@ jobs:
       run: |
         cd ./CataHornSolver
         for v in ./Tests/Source/TIP-no-NAT/*.smt2
-        do timeout 150 sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v" || true
-
+        do timeout 150 sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v --blame-hang-timeout 2min" || true > out.txt
         done;
+    - uses: actions/upload-artifact@v3
+      with:
+        name: artifact
+        path: out.txt
   
   
 #  for v in ./Tests/Source/TIP-no-NAT/*.smt2 
