--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,12 +51,13 @@ jobs:
         run: |
           cd ./CataHornSolver
           for v in ./Tests/Source/TIP-no-NAT/*.smt2
-          do timeout 60 sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v" -- >> output.txt || true 
+          do timeout 5 sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v" -- >> output.txt || true 
           done;
       - uses: actions/upload-artifact@v3
         with:
+          run: ls
           name: artifact
-          path: out.txt
+          path: ./CataHornSolver/out.txt
   
   
   #  for v in ./Tests/Source/TIP-no-NAT/*.smt2 
