--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Build
         run: |
           ls
-          dotnet build ./ADTsolver.sln
+          dotnet build ./ADTsolver.sln /nodeReuse:false
       - name: Run
         run: |
           cd ./CataHornSolver
