--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -46,12 +46,13 @@ jobs:
       - name: Build
         run: |
           ls
-          dotnet build ./ADTsolver.sln /nodeReuse:false
+          dotnet build ./ADTsolver.sln 
       - name: Run
         run: |
           cd ./CataHornSolver
           for v in ./Tests/Source/TIP-no-NAT/*.smt2
-          do timeout 3 sh -c "dotnet run --project CataHornSolver.fsproj $v -- >> output.txt" || true 
+          do timeout 3 sh -c "dotnet run --project CataHornSolver.fsproj $v" || true 
+#          do timeout 3 sh -c "dotnet run --project CataHornSolver.fsproj $v -- >> output.txt" || true 
           done;
       - uses: actions/upload-artifact@v3
         with:
