--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,8 +51,13 @@ jobs:
         run: |
           cd ./CataHornSolver
           for v in ./Tests/Source/TIP-no-NAT/*.smt2
-          do timeout 3s sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v" || true
+          do timeout 3s sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v -- >> output.txt" || true
           done;
+      - uses: actions/upload-artifact@v3
+        with:
+          run: ls
+          name: artifact
+          path: ./CataHornSolver/output.txt
   
   #  for v in ./Tests/Source/TIP-no-NAT/*.smt2 
   #        do timeout 1s dotnet run --project CataHornSolver.fsproj $v
