--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,13 +17,13 @@ jobs:
         os: [ ubuntu-latest ]
     runs-on: ${{ matrix.os }}
     steps:
-      #    - name: Cleanup pre-installed tools
-      #      run: |
-      #        # This is a fix for https://github.com/actions/virtual-environments/issues/1918
-      #        sudo rm -rf /usr/share/dotnet
-      #        sudo rm -rf /opt/ghc
-      #        sudo rm -rf "/usr/local/share/boost"
-      #        sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+      - name: Cleanup pre-installed tools
+        run: |
+          # This is a fix for https://github.com/actions/virtual-environments/issues/1918
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
       - uses: actions/checkout@v3
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
