--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           cd ./CataHornSolver
           for v in ./Tests/Source/TIP-no-NAT/*.smt2
-          do timeout 3s sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v -- >> output.txt" || true
+          do timeout 3s sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v" || true
           done;
       - uses: actions/upload-artifact@v3
         with:
