--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,14 +34,13 @@ jobs:
           git clone --recursive https://github.com/ndreuu/SMTLIB2.git
           git submodule update --init --recursive
           ls
-          mkdir ./z3/build/
-          cp -r ./d/z3 ./z3/build/
-          sudo apt install gdebi
-          sudo gdebi --n ./d/reduce.deb
-      #        cd ./z3
-      #        python3 ./scripts/mk_make.py 
-      #        cd build; make
-      #        cd ../../
+#          mkdir ./z3/build/
+#          cp -r ./d/z3 ./z3/build/
+#          sudo apt install gdebi
+#          sudo gdebi --n ./d/reduce.deb
+          cd ./z3
+          python3 ./scripts/mk_make.py 
+          cd build; make
 
       - name: Build
         run: |
