--- a/CataHornSolver/CataHornSolver.fsproj
+++ b/CataHornSolver/CataHornSolver.fsproj
@@ -352,6 +352,7 @@
         <Content Include="..\z3\build\z3">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
+        <Compile Include="Processssss.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
@@ -359,6 +360,7 @@
         <PackageReference Include="Antlr4.Runtime.Standard" Version="4.10.1" />
         <PackageReference Include="FAKE" Version="5.16.0" />
         <PackageReference Include="FAKE.Core" Version="5.16.0" />
+        <PackageReference Include="Fli" Version="1.1.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
         <PackageReference Include="Microsoft.Z3" Version="4.11.2" />
         <PackageReference Include="NUnit" Version="3.13.3" />
