auto generation of table

--- a/CataHornSolver/CataHornSolver.fsproj
+++ b/CataHornSolver/CataHornSolver.fsproj
@@ -354,6 +354,7 @@
         </Content>
         <Compile Include="Processssss.fs" />
         <Compile Include="Program.fs" />
+        <Content Include="build-table.py" />
     </ItemGroup>
 
     <ItemGroup>
