--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -49,8 +49,10 @@ jobs:
           for v in ./Tests/Source/TIP-no-NAT/*.smt2
           do timeout 60s sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v -- >> output.txt" || true
           done;
+      - name: BuildingTable
+        run: python ./CataHornSolver/build-table.py > output.csv
       - uses: actions/upload-artifact@v3
         with:
           run: ls
           name: artifact
-          path: ./CataHornSolver/output.txt
+          path: ./CataHornSolver/output.csv
