--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,10 +47,12 @@ jobs:
         run: |
           cd ./CataHornSolver
           for v in ./Tests/Source/TIP-no-NAT/*.smt2
-          do timeout 60s sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v -- >> output.txt" || true
+          do timeout 4s sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v -- >> output.txt" || true
           done;
       - name: BuildingTable
-        run: python ./CataHornSolver/build-table.py > output.csv
+        run: |
+          ls
+          python ./CataHornSolver/build-table.py > output.csv
       - uses: actions/upload-artifact@v3
         with:
           run: ls
