fix building resolvent for axioms with implications

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -52,6 +52,7 @@ jobs:
       - name: BuildingTable
         run: |
           ls
+          cd ./CataHornSolver
           python ./CataHornSolver/build-table.py > output.csv
       - uses: actions/upload-artifact@v3
         with:
