--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,11 +33,17 @@ jobs:
         run: |
           git clone --recursive https://github.com/ndreuu/SMTLIB2.git
           git submodule update --init --recursive
+#          cd ./z3
+#          python3 ./scripts/mk_make.py 
+#          cd build; make
+      - name: Using-cached-Z3
+        run: |
+          mkdir z3/build/
+          cp ${{ runner.temp }}/z3 z3/build/
+      - name: Redlog-installing
+        run: |
           sudo apt install gdebi
           sudo gdebi --n ./d/reduce.deb
-          cd ./z3
-          python3 ./scripts/mk_make.py 
-          cd build; make
 #      - name: Move-Z3
 #        run: |
 #          cp z3/build/z3 ${{ runner.temp }}/z3
