--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,7 +39,9 @@ jobs:
       - name: Using-cached-Z3
         run: |
           mkdir z3/build/
-          cp ${{ runner.os }}-z3/z3 z3/build/
+          cd ${{ runner.os }}
+          ls
+          cp ${{ runner.os }}/z3 z3/build/
       - name: Redlog-installing
         run: |
           sudo apt install gdebi
