--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,30 +33,22 @@ jobs:
         run: |
           git clone --recursive https://github.com/ndreuu/SMTLIB2.git
           git submodule update --init --recursive
-#          cd ./z3
-#          python3 ./scripts/mk_make.py 
-#          cd build; make
-      - name: Using-cached-Z3
-        run: |
-          mkdir z3/build/
-          cd ${{ runner.temp }}
-          ls
-          cp ${{ runner.temp }}/z3 z3/build/
-      - name: Redlog-installing
-        run: |
           sudo apt install gdebi
           sudo gdebi --n ./d/reduce.deb
-#      - name: Move-Z3
-#        run: |
-#          cp z3/build/z3 ${{ runner.temp }}/z3
-#      - name: Cache-Z3
-#        uses: actions/cache@v2
-#        with:
-#          path: ${{ runner.temp }}/z3
-#          key: ${{ runner.os }}-z3
-#      - name: Use cached file
-#        run: |
-#          cp ${{ runner.temp }}/z3 z3/build/
+          cd ./z3
+          python3 ./scripts/mk_make.py 
+          cd build; make
+      #      - name: Move-Z3
+      #        run: |
+      #          cp z3/build/z3 ${{ runner.temp }}/z3
+      #      - name: Cache-Z3
+      #        uses: actions/cache@v2
+      #        with:
+      #          path: ${{ runner.temp }}/z3
+      #          key: ${{ runner.os }}-z3
+      #      - name: Use cached file
+      #        run: |
+      #          cp ${{ runner.temp }}/z3 z3/build/
       - name: Build
         run: |
           dotnet restore ./ADTsolver.sln
