--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,15 +29,42 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 6.0.x
+      - name: Cache
+        uses: actions/cache@v2
+        id: playwright-cache
+        with:
+          path: cache-path
       - name: Preparing
         run: |
           git clone --recursive https://github.com/ndreuu/SMTLIB2.git
           git submodule update --init --recursive
-          sudo apt install gdebi
-          sudo gdebi --n ./d/reduce.deb
+      - name: Z3-build
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
+        run: |
           cd ./z3
           python3 ./scripts/mk_make.py 
           cd build; make
+          cp -r z3 ~/cache-path 
+      - name: Z3-cp
+        if: steps.playwright-cache.outputs.cache-hit == 'true'
+        run: |
+          mkdir ./z3/build
+          cp ~/cache-path/z3 ./z3/build  
+#          cd ./z3
+#          python3 ./scripts/mk_make.py 
+#          cd build; make
+      - name: Redlog
+        run: |
+          sudo apt install gdebi
+          sudo gdebi --n ./d/reduce.deb
+
+#          cd ./z3
+#          python3 ./scripts/mk_make.py 
+#          cd build; make
+        
+#      - name: Cache
+        
+
       #      - name: Move-Z3
       #        run: |
       #          cp z3/build/z3 ${{ runner.temp }}/z3
