--- a/CataHornSolver/CataHornSolver.fsproj
+++ b/CataHornSolver/CataHornSolver.fsproj
@@ -357,6 +357,7 @@
         <Content Include="eldarica.csv" />
         <Content Include="spacer.csv" />
         <Content Include="compare.py" />
+        <Content Include="output.csv" />
     </ItemGroup>
 
     <ItemGroup>
