--- a/CataHornSolver/CataHornSolver.fsproj
+++ b/CataHornSolver/CataHornSolver.fsproj
@@ -7,6 +7,7 @@
         <IsPackable>false</IsPackable>
         <GenerateProgramFile>false</GenerateProgramFile>
         <RootNamespace>CataHornSolver</RootNamespace>
+        <PlatformTarget>x64</PlatformTarget>
     </PropertyGroup>
 
     <ItemGroup>
