--- a/CataHornSolver/CataHornSolver.fsproj
+++ b/CataHornSolver/CataHornSolver.fsproj
@@ -8,8 +8,13 @@
         <GenerateProgramFile>false</GenerateProgramFile>
         <RootNamespace>CataHornSolver</RootNamespace>
         <PlatformTarget>x64</PlatformTarget>
+        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+    </PropertyGroup>
+    
     <ItemGroup>
         <Compile Include="Process.fs" />
         <Compile Include="State.fs" />
