--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,11 +33,11 @@ jobs:
         run: |
           git clone --recursive https://github.com/ndreuu/SMTLIB2.git
           git submodule update --init --recursive
-      - name: Z3-build
-        run: |
-          cd ./z3
-          python3 ./scripts/mk_make.py 
-          cd build; make
+#      - name: Z3-build
+#        run: |
+#          cd ./z3
+#          python3 ./scripts/mk_make.py 
+#          cd build; make
       - name: Redlog
         run: |
           sudo apt install gdebi
