--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,9 +44,10 @@ jobs:
       - name: Run
         run: |
           cd ./CataHornSolver
-          for v in ./Tests/Source/TIP-no-NAT/*.smt2
-          do timeout 60s sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v -- >> output.txt" || true
-          done;
+          dotnet run --project CataHornSolver.fsproj ./Tests/Source/racer.horn.smt2
+      #          for v in ./Tests/Source/TIP-no-NAT/*.smt2
+#          do timeout 60s sh -c "echo $v; dotnet run --project CataHornSolver.fsproj $v -- >> output.txt" || true
+#          done;
       - uses: actions/upload-artifact@v3
         with:
           name: validation
